1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* make-h2x: Handle .lo files.

	* Makefile.am (defobj_HEADERS): Remove module_headers.

	* objc.patch: Remove.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libdefobj_la_SOURCES,
	libdefobj_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New variables.
	Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
	* make-h2x: Accept srcdir as second argument.

1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-15  Alex Lancaster  <alex@santafe.edu>

	* DefObject.m ([Object_s -setDisplayName:]): Removed cast of
	pointer to unsigned long.
	(_obj_formatIDString),(xsetname), (xexec), (xfexec): Likewise.

1998-06-14  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Remove mention of what might happen with other
	(nonexistent) zone types.  Remove mention of status of current
	Zone implementation.  Remove mention of -setReclaimPolicy:,
	-setStackedSubzones:, -getSubzones, -mergeWithOwner, -getSubzone:.
	Remove -reclaimStorage, -releaseStorage, xfprint, and xfprintid
	declarations.  Improve description of xsetname, xprint, xprintid,
	xfprint, xfprintid, xexec, and xfexec.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Updated documentation tags.
	(PTRFMT): Use %p.

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* DefObject.m ([Object_s -xfprintid]): Fixed typo in comment above
	method

	* defobj.h ([DefinedObject -{xfprint,xfprintid}): Added method and
	doc tags that should exist to DefinedObject protocol.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Fix //# doc strings (following colon required).

1998-05-26  Alex Lancaster  <alex@santafe.edu>

	* defobj.h (raiseEvent,M(), initModule, globalZone, scratchZone,
	defsymbol, defwarning, deferror): Added (//#) doc strings.
	(<{Warning,Error}>): Added (//G) doc strings after each definition.